--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     <main>
       <!-- hero -->
-      <section class="hero section">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
@@ -104,9 +104,8 @@
       <!-- about us -->
       <section class="section">
         <div class="container">
-          <div class="container-flex">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-          </div>
+          <h2 class="section-title">Чем мы занимаемся</h2>
+
           <ul class="list list-retreat">
             <li class="item">
               <img
@@ -138,9 +137,8 @@
       <!-- our team -->
       <section class="team section">
         <div class="container">
-          <div class="container-flex">
-            <h2 class="section-title">Наша команда</h2>
-          </div>
+          <h2 class="section-title">Наша команда</h2>
+
           <ul class="list list-retreat">
             <li class="item">
               <img
