--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
             </li>
           </ul>
 
-          <ul class="list portfolio-list">
+          <ul class="list card-set portfolio-list">
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
                 <img
