--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="feature section">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
-          <ul class="list feature-list">
+          <ul class="list card-set feature-list">
             <li class="item">
               <h3 class="feature-title">Внимание к деталям</h3>
               <p class="feature-paragraph">
@@ -106,30 +106,18 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
 
-          <ul class="list list-retreat">
+          <ul class="list card-set list-about">
             <li class="item">
-              <img
-                src="./images/img-1.jpg"
-                alt="Написание программного кода"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img-1.jpg" alt="Написание программного кода" />
             </li>
             <li class="item">
               <img
                 src="./images/img2.jpg"
                 alt="Разработка мобильного дезайну"
-                width="370"
-                height="294"
               />
             </li>
             <li class="item">
-              <img
-                src="./images/img3.jpg"
-                alt="Подбор дизайнерского решения"
-                width="370"
-                height="294"
-              />
+              <img src="./images/img3.jpg" alt="Подбор дизайнерского решения" />
             </li>
           </ul>
         </div>
@@ -139,7 +127,7 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
 
-          <ul class="list list-retreat">
+          <ul class="list list-team card-set">
             <li class="item">
               <img
                 class="team-photo"
